# senka

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GENERATE_REQUESTS_PROMPT.md  LICENSE-APACHE  LICENSE-MIT  README.md  publish.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: complete.rs  env.rs  init.rs  log.rs  mod.rs  req.rs  run.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  env.rs  lib.rs  loader.rs  redact.rs  request.rs  resolve.rs  template.rs  util.rs
crates/runner/: Cargo.toml
crates/runner/src/: execute.rs  lib.rs  response.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: db.rs  lib.rs  models.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  form.rs  lib.rs  ui.rs
docs/: DECISIONS.md
migrations/: 001_init.sql
requests/: example.get.yml
