[workspace]
members = [
    "crates/core",
    "crates/runner",
    "crates/store",
    "crates/secrets",
    "crates/cli",
    "crates/tui",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI-first HTTP execution and inspection engine with environment/secret management and SQLite logging"
repository = "https://github.com/jel3/senka"
homepage = "https://github.com/jel3/senka"
keywords = ["http", "cli", "rest", "api", "tui"]
categories = ["command-line-utilities", "web-programming::http-client"]

[workspace.dependencies]
# Internal crates
senka-core = { version = "0.1.1", path = "crates/core" }
senka-runner = { version = "0.1.1", path = "crates/runner" }
senka-store = { version = "0.1.1", path = "crates/store" }
senka-secrets = { version = "0.1.1", path = "crates/secrets" }
senka-tui = { version = "0.1.1", path = "crates/tui" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Secrets
keyring = "2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# IDs
ulid = "1"

# Templating
regex = "1"

# Password input
rpassword = "7"
rand = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"
