[package]
name = "senka"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "senka"
path = "src/main.rs"

[dependencies]
senka-core = { workspace = true }
senka-runner = { workspace = true }
senka-store = { workspace = true }
senka-secrets = { workspace = true }
senka-tui = { workspace = true, optional = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
rpassword = { workspace = true }
ulid = { workspace = true }
rand = { workspace = true }

[features]
default = []
tui = ["dep:senka-tui"]
