[package]
name = "senka-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
