[package]
name = "senka-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
senka-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
thiserror = { workspace = true }
serde = { workspace = true }
