[package]
name = "senka-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
senka-core = { workspace = true }
keyring = { workspace = true }
thiserror = { workspace = true }
